<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="@dimen/nav_header_min_height"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- Background Image -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/nav_header_background"
            android:contentDescription="@string/nav_header_desc"
            android:scaleType="centerCrop"
            android:src="@drawable/nav_header_background" />
        <!-- Profile Image -->
        <ImageView
            android:id="@+id/profile"
            android:layout_width="@dimen/nav_header_profile"
            android:layout_height="@dimen/nav_header_profile"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/nav_header_profile"
            android:contentDescription="@string/nav_header_profile_image"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar_you" />

        <RelativeLayout
            android:layout_width="@dimen/nav_header_profile"
            android:layout_height="@dimen/nav_header_profile"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/nav_header_profile">
            <!-- Connection Status Indicator-->
            <ImageView
                android:id="@+id/conn_status"
                android:layout_width="@dimen/nav_header_conn_status"
                android:layout_height="@dimen/nav_header_conn_status"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/nav_header_conn_status_margin_top"
                android:background="@drawable/bg_nav_header_connection_status"
                android:contentDescription="@string/nav_header_connection_status"
                android:padding="@dimen/nav_header_conn_status_padding"
                android:src="@drawable/ic_connection_status"
                app:tint="@color/profile_conn_status_connected" />
        </RelativeLayout>
    </FrameLayout>

    <!-- Title -->
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/NavItemTextAppearance.Bold" />

    <!-- Subtitle -->
    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="@string/nav_header_subtitle"
        android:visibility="gone"/>
</LinearLayout>