<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:padding="8dp">

    <ImageView
        android:id="@+id/initials"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:contentDescription="@null"
        android:src="@drawable/avatar_agent" />

    <TextView
        android:id="@+id/sender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:layout_toEndOf="@+id/initials"
        android:gravity="center_vertical"
        android:letterSpacing="-0.02"
        android:lineSpacingExtra="4sp"
        android:maxLines="1"
        android:text="@string/sender_agent"
        android:textColor="#A3FFFFFF"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:layout_toEndOf="@+id/sender"
        android:gravity="center_vertical"
        android:letterSpacing="-0.02"
        android:lineSpacingExtra="4sp"
        android:maxLines="1"
        android:text="@string/yesterday"
        android:textColor="#5AFFFFFF"
        android:textSize="14sp" />

    <androidx.emoji2.widget.EmojiTextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timestamp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/initials"
        android:gravity="center_vertical"
        android:letterSpacing="-0.02"
        android:lineSpacingExtra="5sp"
        android:text="@string/title_messaging"
        android:textColor="#F2FFFFFF"
        android:textSize="16sp"
        android:translationY="-2.62sp" />
</RelativeLayout>

