<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.WebexConnectDemo.AppBarOverlay"
        android:visibility="gone">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/Theme.WebexConnectDemo.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/profile_frame"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:padding="2dp">
        <!-- Profile Image -->
        <ImageView
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/nav_header_profile_image"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar_you" />

        <!-- Connection Status -->
        <ImageView
            android:id="@+id/conn_status"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="end|bottom"
            android:background="@drawable/bg_nav_header_connection_status"
            android:contentDescription="@string/nav_header_connection_status"
            android:padding="2dp"
            android:src="@drawable/ic_connection_status"
            app:tint="@color/profile_conn_status_connected" />
    </FrameLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingTop="4dp"
        android:paddingEnd="16dp"
        android:paddingBottom="4dp">

        <include
            android:id="@+id/header_conn_status_view"
            layout="@layout/conn_status_view"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="6dp" />

        <TextView
            android:id="@+id/header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/header_conn_status_view"
            android:text="@string/title_messaging"
            android:textColor="@color/header_title"
            android:textSize="34sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <include
        android:id="@+id/content_main"
        layout="@layout/content_home" />

</LinearLayout>